2008-10-16  Full Name  <Email Address>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: added unit test
	for 'Bug 434705 - No autocomplete offered if not assigning result of
	'new' to a variable'.

2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/ParsingTests.cs: Don't start up the MD
	runtime for parser tests.

2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/ParsingTests.cs: Improve tests using new
	TestParser utility class.

	* Makefile.am:
	* UnitTests.mdp: Updated.

	* MonoDevelop.Xml.StateEngine/TestParser.cs: Utility for testing the XML
	parser.

2008-10-15  Full Name  <Email Address>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added test for 'Bug
	434770 - No autocomplete on array types'.

2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionOperatorTests.cs: Track API.

2008-10-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: Added unit test for
	bug 431803.

2008-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added test.

2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* UnitTests.mdp:
	* MonoDevelop.Xml.StateEngine:
	* MonoDevelop.Xml.StateEngine/ParsingTests.cs: Add some simple tests for
	the XML state engine.

2008-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added test for
	432681

2008-10-07  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor.Tests.DefaultEditActions/CaretMoveTests.cs,
	  Mono.TextEditor.Tests.DefaultEditActions/InsertNewLineTests.cs,
	  Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs,
	  Mono.TextEditor.Tests.DefaultEditActions/RemoveTabTests.cs,